syntax = "proto3";

package social;
option go_package = "/proto";

service SocialService {
  rpc SendMessage(MessageRequest) returns (MessageResponse);
  rpc GetFeed(FeedRequest) returns (FeedResponse);
  rpc StreamFeed(StreamRequest) returns (stream MessageRequest);
}

service ReactionsService {
  rpc LikeMessage(LikeRequest) returns (LikeResponse);
  rpc CommentMessage(CommentRequest) returns (CommentResponse);
}

message MessageRequest {
  int32 message_id = 1; // Уникальный ID сообщения
  string username = 2;
  string content = 3;
  int32 like_count = 4; // ✅ Количество лайков
  repeated Comment comments = 5; // ✅ Комментарии к сообщению
}

message MessageResponse {
  bool success = 1;
}

message FeedRequest {}

message FeedResponse {
  repeated MessageRequest messages = 1;
}

message StreamRequest {}

message LikeRequest {
  int32 message_id = 1;
  string username = 2;
}

message LikeResponse {
  bool success = 1;
  int32 like_count = 2;
}

message CommentRequest {
  int32 message_id = 1;
  string username = 2;
  string content = 3;
}

message CommentResponse {
  bool success = 1;
  repeated Comment comments = 2;
}

message Comment {
  string username = 1;
  string content = 2;
}
