package main

import (
	"bufio"
	"context"
	"fmt"
	"log"
	"os"
	"time"

	pb "github.com/Belphisto/GOgRPCService/proto"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func streamMessages(client pb.SocialServiceClient) {
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()

	stream, err := client.StreamFeed(ctx, &pb.StreamRequest{})
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ –ø–æ—Ç–æ–∫—É: %v", err)
	}

	fmt.Println("\nüîÑ –ù–∞—á–∏–Ω–∞–µ–º –ø–æ—Ç–æ–∫–æ–≤–æ–µ –ø–æ–ª—É—á–µ–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏–π.") // –ò—Å–ø—Ä–∞–≤–ª–µ–Ω–æ

	for {
		msg, err := stream.Recv()
		if err != nil {
			log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏—è: %v", err)
		}
		fmt.Printf("[%s]: %s\n", msg.Username, msg.Content)
	}
}

func main() {
	clientConn, err := grpc.NewClient("localhost:50052", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è: %v", err)
	}
	defer clientConn.Close()

	client := pb.NewSocialServiceClient(clientConn)

	fmt.Print("–í–≤–µ–¥–∏—Ç–µ –∏–º—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: ")
	scanner := bufio.NewScanner(os.Stdin)
	scanner.Scan()
	username := scanner.Text()

	// –ó–∞–ø—É—Å–∫–∞–µ–º –ø–æ—Ç–æ–∫–æ–≤–æ–µ –ø–æ–ª—É—á–µ–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏–π
	go streamMessages(client)

	for {
		fmt.Print("–í–≤–µ–¥–∏—Ç–µ —Å–æ–æ–±—â–µ–Ω–∏–µ (–∏–ª–∏ 'exit' –¥–ª—è –≤—ã—Ö–æ–¥–∞): ")
		scanner.Scan()
		content := scanner.Text()

		if content == "exit" {
			fmt.Println("–í—ã—Ö–æ–¥ –∏–∑ –∫–ª–∏–µ–Ω—Ç–∞...")
			break
		}

		ctx, cancel := context.WithTimeout(context.Background(), time.Second)
		_, err = client.SendMessage(ctx, &pb.MessageRequest{Username: username, Content: content})
		cancel()

		if err != nil {
			log.Fatalf("–û—à–∏–±–∫–∞ –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è: %v", err)
		}
	}
}
