package client

import (
	"context"
	"fmt"
	"log"
	"time"

	pb "github.com/Belphisto/GOgRPCService/proto"
)

// –û—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ –∏—Å—Ç–æ—Ä–∏–∏ —á–∞—Ç–∞
func DisplayChatHistory(socialClient pb.SocialServiceClient) {
	ctx, cancel := context.WithTimeout(context.Background(), time.Second)
	defer cancel()

	resp, err := socialClient.GetFeed(ctx, &pb.FeedRequest{})
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –∏—Å—Ç–æ—Ä–∏–∏ —á–∞—Ç–∞: %v", err)
	}

	fmt.Println("\nüìú –ò—Å—Ç–æ—Ä–∏—è —á–∞—Ç–∞:")
	for _, msg := range resp.Messages {
		fmt.Printf("\nüì© –°–æ–æ–±—â–µ–Ω–∏–µ #%d –æ—Ç %s: %s (‚ù§Ô∏è %d –ª–∞–π–∫–æ–≤)\n", msg.MessageId, msg.Username, msg.Content, msg.LikeCount)
		for _, comment := range msg.Comments {
			fmt.Printf("üí¨ [%s]: %s\n", comment.Username, comment.Content)
		}
	}
}
