package server

import (
	"context"
	"fmt"
	"log"
	"sync"

	pb "github.com/Belphisto/GOgRPCService/proto"
)

// –†–µ–∞–ª–∏–∑–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–∞ —Ä–µ–∞–∫—Ü–∏–π (–ª–∞–π–∫–∏, –∫–æ–º–º–µ–Ω—Ç–∞—Ä–∏–∏)
type ReactionsServer struct {
	pb.UnimplementedReactionsServiceServer
	mu sync.Mutex
}

// –õ–∞–π–∫ —Å–æ–æ–±—â–µ–Ω–∏—è
func (s *ReactionsServer) LikeMessage(ctx context.Context, req *pb.LikeRequest) (*pb.LikeResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	var targetMessage *Message
	for _, msg := range SocialServerInstance.messages {
		if msg.ID == req.MessageId {
			targetMessage = msg
			break
		}
	}

	if targetMessage == nil {
		log.Printf("‚ùå –û—à–∏–±–∫–∞: –°–æ–æ–±—â–µ–Ω–∏–µ #%d –Ω–µ –Ω–∞–π–¥–µ–Ω–æ\n", req.MessageId)
		return nil, fmt.Errorf("—Å–æ–æ–±—â–µ–Ω–∏–µ #%d –Ω–µ –Ω–∞–π–¥–µ–Ω–æ", req.MessageId)
	}

	targetMessage.Likes++
	log.Printf("‚ù§Ô∏è –õ–∞–π–∫ –æ—Ç %s –∫ —Å–æ–æ–±—â–µ–Ω–∏—é #%d\n", req.Username, req.MessageId)

	return &pb.LikeResponse{Success: true, LikeCount: targetMessage.Likes}, nil
}

// –ö–æ–º–º–µ–Ω—Ç–∞—Ä–∏–π –∫ —Å–æ–æ–±—â–µ–Ω–∏—é
func (s *ReactionsServer) CommentMessage(ctx context.Context, req *pb.CommentRequest) (*pb.CommentResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º —Å—É—â–µ—Å—Ç–≤–æ–≤–∞–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏—è
	if req.MessageId < 1 || int(req.MessageId) > len(SocialServerInstance.messages) {
		log.Printf("‚ùå –û—à–∏–±–∫–∞: –°–æ–æ–±—â–µ–Ω–∏–µ #%d –Ω–µ –Ω–∞–π–¥–µ–Ω–æ\n", req.MessageId)
		return nil, fmt.Errorf("—Å–æ–æ–±—â–µ–Ω–∏–µ #%d –Ω–µ –Ω–∞–π–¥–µ–Ω–æ", req.MessageId)
	}

	SocialServerInstance.messages[req.MessageId-1].Comments = append(
		SocialServerInstance.messages[req.MessageId-1].Comments,
		&pb.Comment{Username: req.Username, Content: req.Content},
	)

	log.Printf("üí¨ –ö–æ–º–º–µ–Ω—Ç–∞—Ä–∏–π –æ—Ç %s –∫ —Å–æ–æ–±—â–µ–Ω–∏—é #%d: %s\n", req.Username, req.MessageId, req.Content)
	return &pb.CommentResponse{Success: true, Comments: SocialServerInstance.messages[req.MessageId-1].Comments}, nil
}
